--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* General page styles */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,6 +54,8 @@ main img {
     border: 1px solid #ccc;
     padding: 5px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    float: right;
+    margin-left: 1rem;
 }
 
 /* Aside section */
@@ -67,6 +75,30 @@ aside img {
     height: auto;
 }
 
+aside {
+    position: relative;
+    /* container for absolute positioning */
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+
+aside h2 {
+    position: absolute;
+    top: 40px;
+    /* adjust until it looks good */
+    left: 20px;
+    /* adjust until it looks good */
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 0.5rem;
+    border-radius: 5px;
+}
+
 /* Paragraphs */
 p {
     padding: 0;
@@ -78,4 +110,13 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+    margin: 1rem;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    color: #333;
 }
