--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -145,7 +145,8 @@ section p {
 .adventure-gallery img {
     width: 100%;
     max-width: 150px;
-    height: auto;
+    height: 150px;
+    object-fit: cover;
     display: block;
     margin: 0 auto;
 }
