--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -98,7 +98,7 @@ nav a:hover {
     color: #fff;
 }
 
-.hero article {
+.hero div {
     position: absolute;
     bottom: 20px;
     left: 20px;
@@ -107,7 +107,7 @@ nav a:hover {
     border: 2px solid var(--secondary-color);
 }
 
-.hero article img {
+.hero div img {
     float: right;
     width: 125px;
     margin-left: 10px;
