--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -241,7 +241,7 @@ main h1 {
 }
 
 .contact-form h2 {
-    color: var(--secondary-color);
+    color: var(--primary-color);
     margin-bottom: 15px;
     text-align: center;
 }
@@ -334,7 +334,7 @@ main h1 {
 }
 
 .profiles h2 {
-    color: var(--secondary-color);
+    color: var(--primary-color);
     margin-bottom: 30px;
     font-size: 1.8rem;
 }
@@ -459,7 +459,7 @@ main h1 {
 }
 
 .cta-home h2 {
-    color: var(--secondary-color);
+    color: var(--primary-color);
     margin-bottom: 10px;
 }
 
@@ -569,7 +569,7 @@ main h1 {
 }
 
 .trip-info h2 {
-    color: var(--secondary-color);
+    color: var(--primary-color);
     margin-bottom: 10px;
 }
 
@@ -590,7 +590,7 @@ main h1 {
 
 .trip-table h2 {
     text-align: center;
-    color: var(--secondary-color);
+    color: var(--primary-color);
     margin-bottom: 20px;
 }
 
